Make work again with Java 1.8
Signed-off-by: Sven Strickroth <email@cs-ware.de>